Update README with examples and fix repository URL in typst.toml

--- a/typst.toml
+++ b/typst.toml
@@ -5,6 +5,7 @@ entrypoint = "lib.typ"
 authors = ["teismar"]
 license = "MIT"
 description = "A Typst package for plotting timelines"
-repository = "https://github.com/teismar/zeitline"
+repository = "https://github.com/teismar/typst-zeitline"
 keywords = ["timeline", "visualization"]
 categories = ["visualization", "components"]
+exclude = ["tests", "img", ".github", ".vscode", ".gitignore"]
