--- a/typst.toml
+++ b/typst.toml
@@ -4,8 +4,8 @@ version = "0.1.1"
 entrypoint = "lib.typ"
 authors = ["teismar"]
 license = "MIT"
-description = "A Typst package for plotting timelines"
+description = "Plot timelines"
 repository = "https://github.com/teismar/typst-zeitline"
 keywords = ["timeline", "visualization"]
 categories = ["visualization", "components"]
-exclude = ["tests", "img", ".github", ".vscode", ".gitignore"]
+exclude = ["tests", "img", ".github", ".vscode", ".gitignore", "test.yml"]
